# frama-c-mirror

./: ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  Changelog  INSTALL.md  Makefile  README.md  VERSION  configurator.ml  dune  dune-project  opam  reference-configuration.md
share/: Makefile.common  Makefile.documentation  Makefile.headers  Makefile.installation  Makefile.linting  Makefile.testing  _frama-c  _frama-c.zsh  autocomplete_frama-c  dune  frama-c.Unix.rc  frama-c.WIN32.rc
share/analysis-scripts/: analysis.mk  bench-sqlite.sh  benchmark_database.py  build.py  build_callgraph.py  clone.sh  cmd-dep.sh  concat-csv.sh  creduce.sh  detect_recursion.py  dune  epilogue.mk  estimate_difficulty.py  external_tool.py  fc-estimate-difficulty.mk  fc_stubs.c  fced-lin.Dockerfile  fced-win.Dockerfile  fclog.py  find_fun.py  frama_c_results.py  function_finder.py  git_utils.py  heuristic_list_functions.py  list_files.py  list_functions.ml  make_wrapper.py  normalize_jcdb.py  parse-coverage.sh  plot.sh  print_callgraph.py  prologue.mk  results_display.py  script_for_creduce_fatal.sh  script_for_creduce_non_fatal.sh  source_filter.py  summary.py  template.mk
share/analysis-scripts/fced-test/: a.c
share/compliance/: nonstandard_identifiers.json
share/emacs/: acsl.el  frama-c-dev.el  frama-c-init.el  frama-c-recommended.el
share/libc/: __fc_alloc_axiomatic.h  __fc_builtin.c  __fc_builtin.h  __fc_define_at.h  __fc_define_blkcnt_t.h  __fc_define_blksize_t.h  __fc_define_clockid_t.h  __fc_define_dev_t.h  __fc_define_eof.h  __fc_define_fd_set_t.h  __fc_define_fds.h  __fc_define_file.h  __fc_define_fpos_t.h  __fc_define_fs_cnt.h  __fc_define_id_t.h  __fc_define_ino_t.h  __fc_define_intptr_t.h  __fc_define_iovec.h  __fc_define_key_t.h  __fc_define_locale_t.h  __fc_define_max_open_files.h  __fc_define_mbstate_t.h  __fc_define_mode_t.h  __fc_define_nlink_t.h  __fc_define_null.h  __fc_define_off_t.h  __fc_define_pid_t.h  __fc_define_pthread_types.h  __fc_define_sa_family_t.h  __fc_define_seek_macros.h  __fc_define_sigset_t.h  __fc_define_size_t.h  __fc_define_sockaddr.h  __fc_define_ssize_t.h  __fc_define_stat.h  __fc_define_suseconds_t.h  __fc_define_time_t.h  __fc_define_timer_t.h  __fc_define_timespec.h  __fc_define_timeval.h  (+112 more)
share/libc/arpa/: inet.h
share/libc/net/: if.h
share/libc/netinet/: in.c  in.h  ip.h  tcp.h
share/libc/sys/: file.h  ioctl.h  ipc.h  mman.h  msg.h  param.h  random.h  resource.h  select.h  sem.h  sendfile.h  shm.h  signal.h  socket.c  socket.h  stat.h  statvfs.h  sysmacros.h  time.h  times.h  timex.h  types.h  uio.h  un.h  utsname.h  vfs.h  wait.h
share/machdeps/: Makefile  machdep-schema.yaml  machdep_avr_16.yaml  machdep_avr_8.yaml  machdep_gcc_x86_16.yaml  machdep_gcc_x86_32.yaml  machdep_gcc_x86_64.yaml  machdep_msvc_x86_64.yaml  machdep_ppc_32.yaml  machdep_x86_16.yaml  machdep_x86_32.yaml  machdep_x86_64.yaml
share/machdeps/make_machdep/: alignof_aligned.c  alignof_double.c  alignof_float.c  alignof_fun.c  alignof_int.c  alignof_long.c  alignof_longdouble.c  alignof_longlong.c  alignof_ptr.c  alignof_short.c  alignof_str.c  char_is_unsigned.c  const_string_literals.c  errno.c  has__builtin_va_list.c  int_fast16_t.c  int_fast32_t.c  int_fast64_t.c  int_fast8_t.c  intptr_t.c  limits_macros.c  little_endian.c  make_machdep.py  make_machdep_common.h  max_align_t.c  nsig.c  posix_version.c  ptrdiff_t.c  sanity_check.c  sig_atomic_t.c  size_t.c  sizeof_double.c  sizeof_float.c  sizeof_fun.c  sizeof_int.c  sizeof_long.c  sizeof_longdouble.c  sizeof_longlong.c  sizeof_ptr.c  sizeof_short.c  (+14 more)
src/: dune
src/init/: dune  frama_c_init.ml  frama_c_init.mli  gui_init.mli
src/init/boot/: boot.ml  boot.mli  dune
src/init/impl_cmdline/: dune  gui_init.ml
src/init/impl_gui/: dune  gui_init.ml
src/init/toplevel/: toplevel_config.ml
src/kernel_internals/parsing/: clexer.mli  clexer.mll  cparser.mly  dune  errorloc.ml  errorloc.mli  lexerhack.ml  lexerhack.mli  logic_lexer.mli  logic_lexer.mll  logic_parser.mly  logic_preprocess.mli  logic_preprocess.mll  parse_env.ml  parse_env.mli
src/kernel_internals/runtime/: boot.ml  boot.mli  dump_config.ml  dump_config.mli  dune  machdep.ml  machdep.mli  macos_dirs.ml  messages.ml  messages.mli  special_hooks.ml  special_hooks.mli  system_config.ml.in  system_config.mli  unix_dirs.ml  win_dirs.ml
src/kernel_internals/typing/: allocates.ml  allocates.mli  alpha.ml  alpha.mli  asm_contracts.ml  asm_contracts.mli  cabs2cil.ml  cabs2cil.mli  cfg.ml  cfg.mli  frontc.ml  frontc.mli  ghost_accesses.ml  ghost_accesses.mli  ghost_cfg.ml  ghost_cfg.mli  infer_assigns.ml  infer_assigns.mli  mergecil.ml  (+15 more)
src/plugins/: .gitattributes
tests/fc_script/: dune
tests/misc/: Debug_category.ml  add_assigns.ml  array_sizeof.i  asm_initialized.i  audit.c  behavior_names.ml  bts0452.ml  bts0489.ml  bts0525-2.i  bts0525.i  bts0990_link.i  bts1201.ml  bts1347.ml  bug_0209.ml  callsite.ml  change_main.ml  cil_builder.i  cil_builder.ml  cli_string_multiple_map.ml  conditionnal_void_operands.i  copy_kf.ml  copy_machdep.ml  cpp-extra-args-per-file1.c  debug_category.i  decimal_parameter.i  decimal_parameter.ml  dune  ensures.ml  eva_annot.c  eva_annot_dead.c  eva_annot_float.c  eva_annot_range.c  exception.ml  find_enclosing_loop.ml  global_decl_loc.i  global_decl_loc.ml  global_decl_loc2.i  init_from_cil.ml  interpreted_automata_dataflow_backward.ml  interpreted_automata_dataflow_forward.ml  (+34 more)
tests/slicing/: README  adpcm.c  adpcm.ml  anim.ml  annot.i  bts0184.i  bts0190.i  bts0950_annot.i  bts1248.i  bts1445.i  bts1684.i  bts1768.i  bts179.i  bts283.i  bts326.i  bts335.i  bts335b.i  bts336.i  bts341.i  bts344.i  bts345.i  bts679.i  bts679b.i  bts709.c  bts808.i  bts827.i  call_accuracy.i  call_demo.i  callwise.i  combine.ml  csmith.i  dune  ex_spec_interproc.ml  filter.i  forall_loop_invariant.i  function_lvar.i  horwitz.i  horwitz.ml  if_many_values.i  initialized.i  (+31 more)
tools/hdrck/: Makefile  dune  dune-project  frama-c-hdrck.opam  hdrck.ml
tools/lint/: Makefile  README.md  UTF8.ml  UTF8.mli  dune  dune-project  frama-c-lint.opam  lint.ml
(+6007 files in other folders)
