(cram
  (applies_to user_directories.unix.t)
  (enabled_if (and (= %{os_type} unix) (<> %{system} macos)))
)

(cram
  (applies_to pragma-pack-gcc)
  (enabled_if %{bin-available:gcc})
  (deps pragma-pack.c pragma-pack-utils.h)
)

(cram
  (applies_to log-truncation)
  (enabled_if %{bin-available:socat})
)
