opam-version: "2.0"
name: "frama-c-lint"
synopsis: "Frama-C lint tool"
version: "30.0+dev"
description:"""
Performs all checks related to source code formatting as required by the Frama-C
continuous integration. Namely: OCP-indent for ML files, clang-format for E-ACSL
C files, UTF8 for all text files, newline at EOF, no trailing whitespaces.
"""
maintainer: "allan.blanchard@cea.fr"
authors: [
  "Allan Blanchard"
  "Patrick Baudin"
]
homepage: "https://frama-c.com/"
license: "LGPL-2.1-only"
dev-repo: "git+https://git.frama-c.com/pub/frama-c.git"
bug-reports: "https://git.frama-c.com/pub/frama-c/issues"
build: [
  "dune" "build" "-j%{jobs}%" "--release"
]
install: [
  "dune" "install" "-j%{jobs}%" "--prefix=%{prefix}%"
]
depends: [
  "dune" { > "3.2.0" }
  "camomile"
  "conf-clang-format"
  "ocp-indent" { = "1.8.1" }
]
