;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Aorai plug-in of Frama-C.                        ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;    INRIA (Institut National de Recherche en Informatique et en         ;;
;;           Automatique)                                                 ;;
;;    INSA  (Institut National des Sciences Appliquees)                   ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action (progn
          (echo "Aorai:" %{lib-available:frama-c-aorai.core} "\n")
          (echo "  - (optional) Eva:" %{lib-available:frama-c-eva.core} "\n")
  )
  )
)

( library
  (name aorai)
  (optional)
  (public_name frama-c-aorai.core)
  (flags -open Frama_c_kernel :standard -w -9)
 (libraries frama-c.kernel
  (select aorai_eva_analysis.ml from
   (frama-c-eva.core -> aorai_eva_analysis.enabled.ml)
   (  -> aorai_eva_analysis.disabled.ml)
  )
 )
 (instrumentation (backend landmarks))
 (instrumentation (backend bisect_ppx))
)

(ocamllex yalexer)
(menhir
  (modules yaparser)
  ; "--fixed-exception" fixes compatibility with ocamlyacc Parsing.Parse_error
  (flags --fixed-exception --explain --dump --comment)
)

(plugin (optional) (name aorai) (libraries frama-c-aorai.core) (site (frama-c plugins)))
