;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Frama-C.                                         ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action
  (progn
   (echo "EVA:" %{lib-available:frama-c-eva.core} "\n")
   (echo " - ppx_deriving.eq:" %{lib-available:ppx_deriving.eq} "\n")
   (echo " - ppx_deriving.ord:" %{lib-available:ppx_deriving.ord} "\n")
   (echo "Numerors:" %{lib-available:frama-c-eva.numerors.core} "\n")
   (echo " - MLMPFR:" %{lib-available:mlmpfr} "\n")
   (echo "Apron domains:" %{lib-available:frama-c-eva.apron.core} "\n")
   (echo " - apron.octMPQ:" %{lib-available:apron.octMPQ} "\n")
   (echo " - apron.boxMPQ:" %{lib-available:apron.boxMPQ} "\n")
   (echo " - apron.polkaMPQ:" %{lib-available:apron.polkaMPQ} "\n")
   (echo " - apron.apron:" %{lib-available:apron.apron} "\n"))))

(library
 (name eva)
 (optional)
 (public_name frama-c-eva.core)
 (flags -open Frama_c_kernel :standard -w -9)
 (libraries frama-c.kernel frama-c-server.core)
 (instrumentation (backend landmarks))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord)))

(plugin
 (name eva)
 (optional)
 (libraries frama-c-eva.core)
 (site (frama-c plugins)))

(include_subdirs unqualified)

(subdir gui (include_subdirs no))
(subdir gui
 (library
  (name eva_gui)
  (optional)
  (public_name frama-c-eva.gui)
  (flags -open Frama_c_kernel -open Frama_c_gui -open Eva__Private :standard -w -9)
  (libraries eva frama-c.kernel frama-c.gui)
  (instrumentation (backend landmarks))))

(plugin
 (name eva-gui)
 (optional)
 (libraries frama-c-eva.gui)
 (site (frama-c plugins_gui)))

(subdir domains/numerors (include_subdirs no))
(subdir domains/numerors
 (library
  (name numerors)
  (optional)
  (public_name frama-c-eva.numerors.core)
  (flags -open Frama_c_kernel -open Eva__Private :standard)
  (libraries frama-c.kernel frama-c-eva.core mlmpfr)
  (instrumentation (backend landmarks))
  (instrumentation (backend bisect_ppx))))

(plugin
 (name eva.numerors)
 (optional)
 (libraries frama-c-eva.numerors.core)
 (site (frama-c plugins)))

(subdir domains/apron (include_subdirs no))
(subdir domains/apron
 (library
  (name apron_domain)
  (optional)
  (public_name frama-c-eva.apron.core)
  (flags -open Frama_c_kernel -open Eva__Private :standard -w -9)
  (libraries
   frama-c.kernel frama-c-eva.core
   apron.octMPQ apron.boxMPQ apron.polkaMPQ apron.apron)
  (instrumentation (backend landmarks))
  (instrumentation (backend bisect_ppx))))

(plugin
  (name eva.apron)
  (optional)
  (libraries frama-c-eva.apron.core)
  (site (frama-c plugins)))

(subdir gen_api
 (include_subdirs no)
 (executable
  (name gen_api)
  (modules gen_api)
  (libraries str)))

(rule
 (targets Eva.ml Eva.mli)
 (mode (promote (only Eva.mli)))
 (deps
  gen_api/Eva.header
  engine/analysis.mli types/callstack.mli types/deps.mli
  utils/results.mli parameters.mli
  utils/eva_annotations.mli eval.mli types/assigns.mli ast/eva_ast.mli
  domains/cvalue/builtins.mli utils/cvalue_callbacks.mli utils/eva_perf.mli
  legacy/logic_inout.mli utils/eva_results.mli utils/unit_tests.mli
  utils/export.mli)
 (action (run ./gen_api/gen_api.exe %{deps})))
