;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Frama-C.                                         ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action (progn
          (echo "Impact:" %{lib-available:frama-c-impact.core} "\n")
          (echo "  - Callgraph:" %{lib-available:frama-c-callgraph.core} "\n")
          (echo "  - Slicing:" %{lib-available:frama-c-slicing.core} "\n")
          (echo "  - Inout:" %{lib-available:frama-c-inout.core} "\n")
          (echo "  - Pdg:" %{lib-available:frama-c-pdg.core} "\n")
  )
  )
)


( library
  (name impact)
  (optional)
  (public_name frama-c-impact.core)
  (flags -open Frama_c_kernel :standard -w -9)
  (libraries frama-c.kernel frama-c-pdg.core frama-c-slicing.core frama-c-callgraph.core frama-c-inout.core)
  (instrumentation (backend landmarks))
  (instrumentation (backend bisect_ppx))
)

(plugin (optional) (name impact) (libraries frama-c-impact.core) (site (frama-c plugins)))
