;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Frama-C.                                         ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action (progn
          (echo "Inout:" %{lib-available:frama-c-inout.core} "\n")
          (echo "  - Callgraph:" %{lib-available:frama-c-callgraph.core} "\n")
          (echo "  - Eva:" %{lib-available:frama-c-eva.core} "\n")
          (echo "  - From:" %{lib-available:frama-c-from.core} "\n")
  )
  )
)

( library
  (name inout)
  (optional)
  (public_name frama-c-inout.core)
  (flags -open Frama_c_kernel :standard -w -9)
  (libraries frama-c.kernel frama-c-callgraph.core frama-c-eva.core frama-c-from.core)
  (instrumentation (backend landmarks))
  (instrumentation (backend bisect_ppx))
)

(plugin (optional) (name inout) (libraries frama-c-inout.core) (site (frama-c plugins)))
